added a clear button and function to validate letters only

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>strings</title>
-	 <link rel="stylesheet" type="text/css" href="main.css">
+    <title>strings</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
+
 <body>
-
-<form action="javascript:void(0)" method="post" id="letter">
-<input  id="textString" type="text" pattern="[A-Za-z]{1,}" name="put something in me">
-<input  type="button" id="butt">
-<div id="hit"></div>
-</form>
-<script src="strings.js"></script>
-
+    <form action="javascript:void(0)" method="post" id="letter">
+        <input id="textString" type="text" name="put something in me">
+        <button type="button" id="butt">Enter</button>
+        <button type="button" id="butt1">Clear</button>
+        <div id="hit"></div>
+    </form>
+    <script src="strings.js"></script>
 </body>
+
 </html>
